@@ -1,6 +1,7 @@
 package com.apkscanner.plugin;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import com.apkscanner.plugin.manifest.Component;
@@ -44,7 +45,8 @@ public abstract class AbstractPlugIn implements IPlugIn
 	public URL getIconURL() {
 		if(component.icon != null) { 
 			try {
-				return new URL(component.icon);
+				URI uri = pluginPackage.getResourceUri(component.icon); 
+				return uri != null ? uri.toURL() : null;
 			} catch (MalformedURLException e) {
 				e.printStackTrace();
 			}
@@ -96,11 +98,22 @@ public abstract class AbstractPlugIn implements IPlugIn
 	public String getActionCommand() {
 		String typeName = null;
 		switch(getType()) {
-		case PLUGIN_TPYE_PACKAGE_SEARCHER: typeName = "PACKAGE_SEARCHER"; break;
-		case PLUGIN_TPYE_UPDATE_CHECKER: typeName = "UPDATE_CHECKER"; break;
-		case PLUGIN_TPYE_EXTRA_TOOL: typeName = "EXTRA_TOOL"; break;
-		default: typeName = "UNKNOWN_TYPE"; break;
+		case PLUGIN_TPYE_PACKAGE_SEARCHER:
+			typeName = IPackageSearcher.class.getSimpleName() + "#" + ((IPackageSearcher)this).getSupportType();
+			break;
+		case PLUGIN_TPYE_UPDATE_CHECKER:
+			typeName = IUpdateChecker.class.getSimpleName();
+			break;
+		case PLUGIN_TPYE_EXTRA_TOOL:
+			typeName = IExternalTool.class.getSimpleName() + "#" + ((IExternalTool)this).getToolType();
+			break;
+		default:
+			typeName = IPlugIn.class.getName();
+			break;
 		}
 		return getPackageName() + "!" + typeName + "@" + getName();
 	}
+
+	@Override
+	public void launch() { }
 }
